hetch-accounts.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    app: accounts
spec:
  replicas: 3
  selector:
    matchLabels:
      app: accounts
  template:
    metadata:
      labels:
        app: accounts
    spec:
      containers:
      - name: accounts
        image: registry.digitalocean.com/hetchfundcapital/accounts:1.0.02
        ports:
        - containerPort: 4000
      imagePullSecrets:
        - name: do-registry
