hetch-accounts.service.yml
apiVersion: v1
kind: Service
metadata:
  name: accounts-service
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  selector:
    app: accounts
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
  type: ClusterIP
