hetch-translator.service.yml
apiVersion: v1
kind: Service
metadata:
  name: translator-service
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  selector:
    app: translator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4001
