www.service.yml
apiVersion: v1
kind: Service
metadata:
  name: www-service
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  selector:
    app: www
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
