ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-routes
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "X-Forwarded-For, X-app123-XPTO"
    nginx.ingress.kubernetes.io/cors-expose-headers: "*, X-CustomResponseHeader"
    nginx.ingress.kubernetes.io/cors-max-age: "600"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "false"
    nginx.ingress.kubernetes.io/default-backend: "www-service"
    nginx.ingress.kubernetes.io/custom-http-errors: "404,415"

spec:
  tls:
    - hosts:
      - apis.hetchfund.capital
      - www.hetchfund.capital
      - hetchfund.capital
      secretName: hetchfund.capital-ca
  rules:
    - host: apis.hetchfund.capital
      http:
        paths:
          - path: /translator
            pathType: Prefix
            backend:
              service:
                name:  translator-service
                port:
                  number: 80
          - path: /accounts
            pathType: Prefix
            backend:
              service:
                name:  accounts-service
                port:
                  number: 80
    - host: www.hetchfund.capital
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  www-service
                port:
                  number: 80
